mule-user-guide/v/3.2/using-outbound-endpoints-to-publish-data.adoc
= Using Outbound Endpoints to Publish Data

This example shows how to use outbound endpoints in Mule. Outbound endpoints are useful for publishing data to a flow, application, or resource.

== What you will Learn

* How to build on an existing Mule flow in Mule Studio
* How to get data from an HTTP inbound endpoint and output it to a file using an outbound endpoint

15 minutes

== Build it now!

=== Prerequisites

This example requires that you run through the earlier example link:/mule-user-guide/v/3.2/transforming-data-in-a-flow[Transforming Data in a Flow].

=== Building the Example

\1. We are going to continue editing the link:/mule-user-guide/v/3.2/transforming-data-in-a-flow[example] and add a File component to the flow. Drag the File endpoint from the palette to the canvas after the Echo component.

image:/documentation-3.2/download/attachments/50036858/studioFlowShouldLookLike.png?version=1&modificationDate=1358794051908[image]

\2. Double-click on the File endpoint to edit its properties.

\3. In the "General" tab, give your flow a name and choose a path and name for the file that will be outputted. In the example below,

code,code-java----
 code,code-java
#[function:datestamp]
----

is a Mule expression which automatically appends the current date & time to a file named myfile.

image:/documentation-3.2/download/attachments/50036858/studioConfigureFileEndpoint.png?version=2&modificationDate=1358794186787[image]

== Running the Example

\4. Right-click on the flow in the project tree and select Run As... -> Mule Application.

image:/documentation-3.2/download/attachments/50036858/studioRunApplication.png?version=1&modificationDate=1358794205843[image]

\5. Next, open up a browser and go to http://localhost:8081/echo. You should see the following in your browser:

image:/documentation-3.2/download/attachments/50036858/studioBrowserOutput.png?version=1&modificationDate=1358794234197[image]

\6. Now, go back to Mule Studio and check the logs - you will see that myfile#timestamp got created in the specified location with the output inside of it. Browse to the directory in your file explorer and open the file to see your output.

image:/documentation-3.2/download/attachments/50036858/studioFileOutput.png?version=1&modificationDate=1358794254861[image]

== What Just Happened?

* You sent an HTTP request via an inbound endpoint by going to http://localhost:8081/echo.
* You added a File endpoint to your flow which demonstrated how Mule can take the information via the HTTP request and output it in different places (in this case, a file).

== References

link:/mule-user-guide/v/3.2/endpoint-configuration-reference[Endpoint Configuration Reference]

== Next Steps

[cols=",,",]
|===
|http://www.mulesoft.org/display/32X/Manipulating+Requests+Using+Scripting[« Manipulating Requests Using Scripting] |http://www.mulesoft.org/display/32X/Home[Back to Index] |http://www.mulesoft.org/display/32X/Interactions+with+Exchange+Patterns[Interactions with Exchange Patterns »]
|===

'''''

image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/loading_mini.gif[image]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/rater.gif[image]

Your Rating:

Thanks for voting!

link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=50036858&rating=1&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=50036858&rating=2&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=50036858&rating=3&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=50036858&rating=4&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=50036858&rating=5&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]

image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Please Wait,title="Please Wait"]

Please Wait

Results:

image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Pathetic,title="Pathetic"]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Bad,title="Bad"]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[OK,title="OK"]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Good,title="Good"]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Outstanding!,title="Outstanding!"]

15

rates

